# win-emerge

./: Cargo.toml  LICENSE  README.md
LICENSES/: num_cpus-MIT.txt  reqwest-MIT.txt
src/: commands.rs  core.rs  decompress.rs  download.rs  error.rs  main.rs  windows.rs  wsl.rs
src/commands/: init.rs  install.rs
src/config/: config.rs
